--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "type": "git",
     "url": "git+https://github.com/6Ghadam/6Ghadam-FrontEnd-Test.git"
   },
-  "author": "",
+  "author": "Mohammad Mehdi",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/6Ghadam/6Ghadam-FrontEnd-Test/issues"
